--- a/chat.html
+++ b/chat.html
@@ -22,6 +22,8 @@
 		<div>
 			<input id="input" style="width: 99%; height: 30px;"> </input>
 		</div>
+		<h3>users online</h3>
+		<div id="onlineUsers"></div>
 	</div>
 </body>
 </html>
